chore: Update .gitignore
Ignores MacOS hidden generated files.

--- a/.gitignore
+++ b/.gitignore
@@ -176,3 +176,6 @@ dist
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/git,node,visualstudiocode
+
+### Additional Git Ignores ###
+*.DS_Store
