feat: Basic HTML Drawing Screen

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "--- ## Authors 1. Muaawiyah Dadabhay 2. Muhammad Raees Dindar 3. Taahir Kolia 4. Irfaan Mia",
   "main": "server.js",
   "directories": {
-    "doc": "docs"
+    "doc": "docs",
+    "test": "tests"
   },
   "scripts": {
     "start": "node server.js"
