--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2",
+    "express": "4.19.2",
+    "nodemon": "3.1.0",
+    "socket.io": "4.7.5",
     "standard": "^17.1.0"
   },
   "devDependencies": {
