--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "devDependencies": {
     "@playwright/test": "^1.43.1",
     "@types/node": "^20.12.7",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "jsdom": "^24.0.0",
+    "playwright": "^1.43.1"
   }
 }
