test: Add unit tests to mock the server connections

--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "server.js",
   "directories": {
     "doc": "docs",
-    "test": "tests"
+    "test": "tests",
+    "unit": "__tests__"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "jest --testPathPattern=__tests__ --coverage"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +18,7 @@
     "express": "4.19.2",
     "nodemon": "3.1.0",
     "socket.io": "4.7.5",
+    "socket.io-client": "4.7.5",
     "standard": "^17.1.0"
   },
   "devDependencies": {
