--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "body-parser": "1.20.2",
     "dotenv": "16.4.5",
     "express": "4.19.2",
-    "firebase": "10.11.1",
+    "firebase": "^10.11.1",
     "nodemon": "3.1.0",
     "socket.io": "4.7.5",
     "socket.io-client": "4.7.5",
