--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "directories": {
     "doc": "docs",
-    "test": "tests"
+    "test": "tests",
+    "unit": "__tests__"
   },
   "scripts": {
     "start": "node server.js",
