--- a/.github/workflows/main_miscommunicationmayhem.yml
+++ b/.github/workflows/main_miscommunicationmayhem.yml
@@ -34,6 +34,12 @@ jobs:
         with:
           name: node-app
           path: release.zip
+  test:
+    runs-on: ubuntu-latest
+        
+    steps: 
+        - name: Run Jest tests
+          run: npm test
 
   deploy:
     runs-on: ubuntu-latest
