build: Attempt to Add Session Secret

--- a/.github/workflows/main_miscommunicationmayhem.yml
+++ b/.github/workflows/main_miscommunicationmayhem.yml
@@ -11,7 +11,8 @@ on:
 jobs:
   build:  
     runs-on: ubuntu-latest
-
+    env:
+      SESSION_SECRET: $(SESSION_SECRET)
     steps:
       - uses: actions/checkout@v4
 
