--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@playwright/test": "^1.43.1",
     "@types/node": "^20.12.7",
+    "coveralls-next": "^4.2.1",
     "jest": "^29.7.0",
     "jsdom": "^24.0.0",
     "playwright": "^1.43.1"
